tests/ui/parser/attribute/attr-bad-meta-2.stderr
error: expected expression, found `]`
  --> $DIR/attr-bad-meta-2.rs:1:9
   |
LL | #[path =]
   |         ^ expected expression

error: aborting due to 1 previous error

