tests/ui/parser/attribute/attr-bad-meta-2.rs
#[path =] //~ ERROR expected expression, found `]`
mod m {}
